--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <h2>Gym Website</h2>
             <p>with the help of HTML and CSS i created gym website </p>
             <div class="im"><img src="gym.png"></div>
-            <a href="http://127.0.0.1:5500/Prasad/Prasad.html" target="_blank">see project</a>
+            <a href="gym.html" target="_blank">see project</a>
 
           </div>
         </div>
@@ -150,7 +150,7 @@
             <h2>Portfolio Website</h2>
             <p>with the help of HTML,CSS and js i created portfolio website </p>
             <div class="im"><img src="port.png"></div>
-            <a href="http://127.0.0.1:5500/portfolio.html" target="_blank">see project</a>
+            <a href="index.html" target="_blank">see project</a>
             
           </div>
         </div>
